# Compliance-Hub

./: .env.example  .env.pilot.example  .gitignore  README.md  SECURITY.md  compliancehub.db  pyproject.toml  tenant_overview.html  test_compliancehub.db
.github/: CODEOWNERS  dependabot.yml
app/: advisor_client_snapshot_models.py  advisor_governance_maturity_brief_models.py  advisor_models.py  advisor_portfolio_models.py  ai_act_doc_models.py  ai_act_evidence_models.py  ai_compliance_board_report_models.py  ai_governance_action_models.py  ai_governance_models.py  ai_inventory_models.py  ai_kpi_models.py  ai_system_models.py  ai_transparency_assurance_models.py  ai_transparency_assurance_routes.py  audit_append_only.py  audit_models.py  auth_dependencies.py  authority_audit_preparation_pack_models.py  board_readiness_models.py  board_reporting_models.py  board_reporting_routes.py  classification_models.py  compliance_calendar_models.py  compliance_compass_models.py  compliance_compass_routes.py  compliance_gap_models.py  cross_regulation_models.py  datetime_compat.py  db.py  db_migrations.py  db_tenant.py  demo_models.py  demo_templates.py  demo_tenant_guard.py  demo_tenant_write_guard.py  enterprise_connector_candidate_models.py  enterprise_connector_runtime_models.py  enterprise_control_center_models.py  enterprise_integration_blueprint_models.py  enterprise_investment_portfolio_models.py  (+52 more)
docs/: advisor-governance-maturity-brief.md  advisor-portfolio-prioritization.md  advisor-priority-nis2-kritis.md  ai-act-docs.md  ai-governance-playbook.md  architecture.md  azure-postgresql-rls-runtime-state-20260715.md  azure-runtime-storage-csp-reporting-20260715.md  board_memo.md  compliance-mapping.md  cross-regulation-dashboard.md  db-migrations.md  demo-board-ready-walkthrough.md  demo-governance-maturity-flow.md  demo-playground.md  e2e-demo-flow.md  enterprise-audit.md  enterprise-entra-oidc-runbook.md  enterprise-gap-analysis-20260406.md  enterprise-governance-hardening.md  enterprise-hardening-wave-20260407.md  enterprise-identity.md  enterprise-readiness-20260714.md  frontend-unification-plan.md  github-publish.md  governance-activity-index.md  governance-maturity-copy-contract.md  governance-maturity-copy-de.md  governance-maturity-lens.md  governance-operational-ai-monitoring.md  governance-telemetry.md  governance-workflows.md  incidents-supplier-drilldowns.md  llm-routing.md  product-strategy.md  public-site-release-runbook.md  readiness-score.md  resolve-pr-conflicts.md  roadmap.md  runtime-events-oami-operations-runbook.md  (+5 more)
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  vitest.config.mts
scripts/: ingest_eu_ai_act_nis2_corpus.py  migrate_20260326_add_tenants_kritis_sector.py  migrate_all.py  rag_eval_hybrid.py  resolve_pr6_conflicts.sh  seed_ai_kpi_definitions.py  seed_demo_tenant.py  seed_synthetic_ai_runtime_events.py
tests/: advisor_brief_scenario_snapshots.py  conftest.py  test_advisor_agent.py  test_advisor_board_reports.py  (+175 more)
(+975 files in other folders)
