[project]
name = "compliancehub"
version = "0.1.0"
description = "Compliance Hub FastAPI service for AI system registry and audit logging"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Luis Schenk" },
]

dependencies = [
  "fastapi>=0.115",
  "sqlalchemy>=2.0",
  "pydantic[email]>=2.0",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]
api = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "app",
]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []


[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
exclude = ["frontend"]
